--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,7 @@
 	<script	src="./js/jquery.min.js"></script>
 	<script	src="./bootstrap/js/bootstrap.min.js"></script>
 	<script	src="./bootstrap/plugins/bootstrap-carousel.js"></script>
-	<link rel="stylesheet" type="text/css" href="./css/style.css" />
+	<link rel="stylesheet" type="text/css" href="./css/style-noticias.css" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -38,7 +38,7 @@ $(document).ready(function(){
 		<ul  class="menu-desktop">
 			<li><a href="./index.html">Home</a></li>
 			<li>|</li>
-			<li><a href="./noticia.html">Notícias</a></li>
+			<li><a href="">Notícias</a></li>
 			<li>|</li>
 			<li><a href="">Nacional</a></li>
 			<li>|</li>
@@ -56,7 +56,7 @@ $(document).ready(function(){
 		  <ul class="dropdown-menu" aria-labelledby="dLabel">
 		    <li><a href="./index.html">Home</a></li>
 			<li>|</li>
-			<li><a href="./noticia.html">Notícias</a></li>
+			<li><a href="">Notícias</a></li>
 			<li>|</li>
 			<li><a href="">Nacional</a></li>
 			<li>|</li>
@@ -66,51 +66,6 @@ $(document).ready(function(){
 		  </ul>
 		</div>
 	</div>
-</div>
-
-<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
-    <!-- Carousel indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <!-- Carousel items -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img class="carrossel" src="./img/tupac.jpg" alt="First Slide">
-            <div class="carousel-caption">
-                <p><button type="button" class="btn btn-danger btn-lg"><a href="./rappers/2pac/2pac.html">Veja Mais</a></button></p>
-                <p>Tupac Shakur</p>
-            </div>
-        </div>
-        <div class="item">
-            <img class="carrossel" src="./img/kendrick.jpg" alt="Second Slide">
-            <div class="carousel-caption">
-                <p><button type="button" class="btn btn-danger btn-lg"><a href="./rappers/kendrick/kendrick.html">Veja Mais</a></button></p>
-                <p>Kendrick Lamar</p>
-            </div>
-        </div>
-        <div class="item">
-            <img class="carrossel" src="./img/eminem.jpg" alt="Third Slide">
-            <div class="carousel-caption">
-			<p><button type="button" class="btn btn-danger btn-lg"><a href="./rappers/eminem/eminem.html">Veja Mais</a></button></p>
-                <p>Eminem</p>
-            </div>
-        </div>
-    </div>
-    <!-- Carousel nav -->
-    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="carousel-control right" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
-</div>
-
-
-<div class=" barra-noticias">
-	<p>Últimas notícias</p>
 </div>
 
 <div class="container-fluid noticias-container">
@@ -171,6 +126,66 @@ $(document).ready(function(){
 					<img class="img-responsive" src="./img/frenesi.jpg" />
 					<div class="legenda">
 						<figcaption>Frenesi de Gabelegal foi lançado! Não perca</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=H4USRFRtbwQ ')">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/poetas-no-topo.jpg" />
+					<div class="legenda">
+						<figcaption>Cypher Poetas no topo, por Pineapple Storm!</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=OcXQbudiOhg' )">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/poetas-no-topo-2.jpg" />
+					<div class="legenda">
+						<figcaption>Parte dois de Poetas no topo!</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=AZfOEpQFjaA' )">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/poetas-no-topo-31.jpg" />
+					<div class="legenda">
+						<figcaption>Poetas no topo 3.1 disponível!</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=cFDcFF4R4Z4' )">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/poetas-no-topo-32.jpg" />
+					<div class="legenda">
+						<figcaption>Última parte de Poetas no topo lançada!</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=M2GFf3oA4SU' )">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/apollo-rudebwoy.jpg" />
+					<div class="legenda">
+						<figcaption>Ano lírico. Amiri lança Apollo/Rude Bwoy!</figcaption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-4 box-noticias">
+			<div class="noticia" onclick="go( 'https://www.youtube.com/watch?v=qeqmyf5up5A' )">
+				<div class="imagem">
+					<img class="img-responsive" src="./img/assalto.jpg" />
+					<div class="legenda">
+						<figcaption>Um crime poético. Assalto a mão letrada - Sid!</figcaption>
 					</div>
 				</div>
 			</div>
