--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     
 <script type="text/javascript">
 $(document).ready(function(){
@@ -44,7 +45,7 @@ $(document).ready(function(){
 			<li>|</li>
 			<li><a href="">Internacional</a></li>
 			<li>|</li>
-			<li><a href="">Sobre</a></li>
+			<li><a href="./plugin/index.html">Sobre</a></li>
 		</ul>
 	</div>
 
